Fix timecard link CSS line-wrapping bug

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -106,7 +106,6 @@ body {
 .timecard-links {
     margin: 20px auto 0;
     text-align: center;
-    width: 300px;
 }
 
 .timecard-links > a {
